# aeronet

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml  conanfile.py  index.md  renovate.json5
aeronet/: CMakeLists.txt
aeronet/client/: CMakeLists.txt
aeronet/client/src/: client-accept-encoding.hpp  client-request-builder.hpp  http-client-codec.hpp  http-client-config.cpp  http-client-tls-context.cpp  http-client.cpp  http-request.cpp  http11-connection.cpp  http11-connection.hpp  http2-connection.cpp  response-parser.cpp  response-parser.hpp  retry-config.cpp  url-parse.hpp  url.cpp
aeronet/client/test/: client-accept-encoding_test.cpp  client-protocol_test.cpp  client-request_test.cpp  http-client-compression-e2e_test.cpp  http-client-config_test.cpp  http-client-core_test.cpp  http-client-e2e_test.cpp  http-client-error-e2e_test.cpp  http-client-error_test.cpp  http-client-exception_test.cpp  http-client-http2-e2e_test.cpp  http-client-proxy-e2e_test.cpp  http-client-tls-e2e_test.cpp  http-request_test.cpp  response-parser-decompress_test.cpp  response-parser_test.cpp  retry-config_test.cpp  url_test.cpp
aeronet/http/: CMakeLists.txt
aeronet/http/include/: connection-state.hpp  event-loop.hpp  header-line-parse.hpp  header-merge.hpp  http-constants.hpp  http-error-build.hpp  http-error.hpp  http-method-build.hpp  http-method-set.hpp  http-method.hpp  http-request.hpp  http-response-build.hpp  http-response.hpp  http-status-build.hpp
aeronet/http/src/: config-loader.cpp  connection-state.cpp  cors-policy.cpp  event-loop.cpp  header-merge.cpp  http-codec.cpp  http-error-build.cpp  http-error.cpp  http-headers-view.cpp  http-message.cpp  http-method-parse.cpp  http-method-parse.hpp  http-request-dispatch.cpp  http-request-view.cpp  http-request.cpp  http-response-prefinalize.cpp  http-response-writer.cpp  http-response.cpp  http-status.cpp  mergeable-headers.hpp  multipart-form-data.cpp  path-handler-entry.cpp  rate-limit-middleware.cpp  rate-limit.cpp  route-constraint.cpp  route-group.cpp  router-config.cpp  router.cpp  static-file-handler.cpp  static-file.cpp  upgrade-handler.cpp  websocket-deflate.cpp  websocket-frame.cpp  websocket-handler.cpp
aeronet/http/test/: config-loader_test.cpp  connection-state-sendfile_test.cpp  connection-state_test.cpp  connection_state_sendfile_test.cpp  cors-policy_test.cpp  event-loop_test.cpp  http-codec_test.cpp  (+22 more)
aeronet/http2/: CMakeLists.txt
aeronet/jwt/: CMakeLists.txt
aeronet/main/: CMakeLists.txt
aeronet/objects/: CMakeLists.txt
aeronet/server/: CMakeLists.txt
aeronet/sys/: CMakeLists.txt
aeronet/tech/: CMakeLists.txt
aeronet/test_support/: CMakeLists.txt
aeronet/tls/: CMakeLists.txt
aeronet/websocket/: CMakeLists.txt
benchmarks/: CMakeLists.txt  benchmark_badge.json  benchmark_high.json  benchmark_latest.json  benchmark_low.json  index.html
benchmarks/clients/: client_benchmark_badge.json  client_benchmark_latest.json  index.html
benchmarks/e2e/: bench_throughput_local.cpp
benchmarks/frameworks/: bench_frameworks_basic.cpp  bench_util.hpp
benchmarks/h2/: benchmark_badge.json  benchmark_badge_h2c.json  benchmark_h2-tls_high.json  benchmark_h2-tls_low.json  benchmark_h2c_high.json  benchmark_h2c_low.json  benchmarks_h2-tls.html  benchmarks_h2c.html
benchmarks/internal/: bench_http_roundtrip.cpp  bench_request_parse.cpp  bench_util.hpp  event-loop-poll-timeout_bench.cpp  event-loop-uring_bench.cpp  hpack_bench.cpp  http2_flow_control_bench.cpp  http2_frame_bench.cpp  keep-alive-deadline-queue_bench.cpp  memory-utils_bench.cpp  request-parse_bench.cpp  reserved-header-check_bench.cpp  response-parse_bench.cpp  router_bench.cpp  string-equal-ignore-case_bench.cpp  websocket-mask_bench.cpp  zerocopy_bench.cpp
benchmarks/scripted-clients/: CMakeLists.txt  README.md  aeronet_client.cpp  beast_client.cpp  bench-client-gzip.hpp  bench-client-harness.hpp  curl_client.cpp  drogon_client.cpp  run_client_benchmarks.py
benchmarks/scripted-servers/: CMakeLists.txt  README.md  aeronet_server.cpp  beast_server.cpp  bench_utils.py  crow_server.cpp  drogon_server.cpp  go.mod  go.sum  go_server.go  pistache_server.cpp  python_server.py  render_benchmarks_html.py  render_ws_benchmarks_html.py  run_benchmarks.py  run_benchmarks.sh  run_ws_benchmarks.py  scripted-servers-helpers.hpp  setup_bench_resources.py  setup_bench_resources.sh  test_benchmark.json  test_output.html  uwebsockets_server.cpp
benchmarks/ws/: index.html  ws_benchmark_20260328_084519.html  ws_benchmark_20260404_161236.html  ws_benchmark_20260430_212737.html  ws_benchmark_20260704_115108.html  ws_benchmark_badge.json  ws_benchmark_latest.json
examples/: CMakeLists.txt  async-handle.cpp  async-handlers.cpp  async.cpp  client-minimal.cpp  config-dump.cpp  http2.cpp  minimal.cpp  multi.cpp  sendfile.cpp  server-minimal.cpp  static-file-http2.cpp  static-file.cpp  tls-ktls.cpp  tls-session-tickets.cpp  websocket-echo.cpp
examples/consumer-cmake/: CMakeLists.txt
modules/: CMakeLists.txt  aeronet.cppm
tests/: CMakeLists.txt  async-http-server_test.cpp  async_http_server.cpp  async_http_server_test.cpp  compile-time-traits_test.cpp  compile_time_traits_test.cpp  dummy.cpp  http-10_test.cpp  http-additional_test.cpp  http-body_test.cpp  http-chunked-head_test.cpp  http-client-integration_test.cpp  http-compression_test.cpp  http-connect_test.cpp  http-core_test.cpp  http-date_test.cpp  http-errors_test.cpp  http-headers_test.cpp  http-https-redirect_test.cpp  http-keepalive_test.cpp  http-options-trace_test.cpp  http-parser-errors_test.cpp  http-probes_test.cpp  http-query-parsing_test.cpp  http-range_test.cpp  http-rate-limit_test.cpp  http-request-decompression_test.cpp  http-routing_test.cpp  http-server-lifecycle_test.cpp  http-stats_test.cpp  http-streaming_test.cpp  http-tls-handshake_test.cpp  http-tls-io_test.cpp  http-tls-openssl-fault-injection.cpp  http-trailers_test.cpp  http-url-decoding_test.cpp  http2-connect_test.cpp  http2-core_test.cpp  http2-streaming_test.cpp  http2-tls-client_test.cpp  (+149 more)
(+693 files in other folders)
