if(AERONET_ENABLE_HTTP_CLIENT)
  add_subdirectory(client)
endif()
add_subdirectory(http)
if(AERONET_ENABLE_HTTP2)
  add_subdirectory(http2)
endif()
if(AERONET_ENABLE_JWT)
  add_subdirectory(jwt)
endif()
add_subdirectory(main)
add_subdirectory(objects)
add_subdirectory(server)
add_subdirectory(sys)
add_subdirectory(tech)
if(AERONET_BUILD_TESTS OR AERONET_BUILD_BENCHMARKS)
  add_subdirectory(test_support)
endif()
if(AERONET_ENABLE_OPENSSL)  
  add_subdirectory(tls)
endif()
if(AERONET_ENABLE_WEBSOCKET)
  add_subdirectory(websocket)
endif()